[gd_scene load_steps=4 format=2]

[ext_resource path="res://RnaNucleotid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Codon.gd" type="Script" id=2]
[ext_resource path="res://assets/codon_arc.png" type="Texture" id=3]

[node name="Codon" type="Node2D"]
script = ExtResource( 2 )

[node name="RnaNucleotid" parent="." instance=ExtResource( 1 )]

[node name="RnaNucleotid2" parent="." instance=ExtResource( 1 )]
position = Vector2( 8, 0 )

[node name="RnaNucleotid3" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 12, -4 )
texture = ExtResource( 3 )
